--- a/jenofones.html
+++ b/jenofones.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>La crítica de Jenófones retomada por Feuerbach</h1>
-  <p>Contenido relacionado con la crítica de Jenófones y su influencia en Feuerbach.</p>
+  <p>Contenido relacionados con la crítica de Jenófones y su influencia en Feuerbach.</p>
 
   <section id="section4" class="section">
     <h2>La Teologia de Jenófanes</h2>
